[tool.poetry]
name = "spoqa_aws_xray_flask_middleware"
version = "0.1.2"
description = "Spoqa flavoured AWS X-Ray middleware for Flask"
authors = ["Spoqa Creators <dev@spoqa.com>"]
maintainers = ["rusty <rusty@spoqa.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spoqa/aws-xray-flask-middleware"

[tool.poetry.dependencies]
python = "^2.7 | ^3.5"
# aws-xray-sdk = "^2.6.0"
# FIXME
# https://github.com/aws/aws-xray-sdk-python/pull/235
aws-xray-sdk = { git = "https://github.com/spoqa/aws-xray-sdk-python.git", branch = "unicode-annotation-values" }
flask = ">=0.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-import-order-spoqa = "^1.5.0"
pytest = "^4.6"
pytest-flake8 = "^1.0.6"
werkzeug = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
